# frappe-hrms-tools

.github/workflows/: README.md  docker-build.yml
frappe-apps/: README.md
frappe-apps/cv_analyzer/: .gitignore  README.md  pyproject.toml
frappe-apps/cv_analyzer/cv_analyzer/: __init__.py  hooks.py  modules.txt
frappe-apps/cv_analyzer/cv_analyzer/api/: cv_analysis_client.py  job_applicant.py
frappe-apps/cv_analyzer/cv_analyzer/config/: cv_analyzer.py
frappe-apps/cv_analyzer/cv_analyzer/cv_analyzer/doctype/company_evaluation_criteria/: company_evaluation_criteria.json  company_evaluation_criteria.py
frappe-apps/cv_analyzer/cv_analyzer/cv_analyzer/doctype/cv_analysis_insight/: cv_analysis_insight.json  cv_analysis_insight.py
frappe-apps/cv_analyzer/cv_analyzer/cv_analyzer/doctype/cv_analysis_result/: cv_analysis_result.json  cv_analysis_result.py
frappe-apps/cv_analyzer/cv_analyzer/cv_analyzer/doctype/cv_analysis_settings/: cv_analysis_settings.json  cv_analysis_settings.py
frappe-apps/cv_analyzer/cv_analyzer/cv_analyzer/doctype/cv_score_section/: cv_score_section.json  cv_score_section.py
frappe-apps/cv_analyzer/cv_analyzer/cv_analyzer/doctype/position_evaluation_framework/: position_evaluation_framework.json  position_evaluation_framework.py
frappe-apps/cv_analyzer/cv_analyzer/public/js/: job_applicant.js
services/: README.md
services/hrms-tools/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.registry.yml  docker-compose.yml  requirements.txt
services/hrms-tools/app/: main.py
services/hrms-tools/tests/: README.md  (+3 more)
(+14 files in other folders)
